# AnnotatedSentence-CPP

./: .gitignore  AnnotatedCorpus.cpp  AnnotatedCorpus.h  AnnotatedSentence.cpp  AnnotatedSentence.h  AnnotatedWord.cpp  AnnotatedWord.h  CMakeLists.txt  Language.h  README.md  TestAnnotatedCorpus.cpp  ViewLayerType.h  conanfile.py  conanfile.txt
AutoProcessor/AutoArgument/: SentenceAutoArgument.h  TurkishSentenceAutoArgument.cpp  TurkishSentenceAutoArgument.h
AutoProcessor/AutoDisambiguation/: SentenceAutoDisambiguator.cpp  SentenceAutoDisambiguator.h  TurkishSentenceAutoDisambiguator.cpp  TurkishSentenceAutoDisambiguator.h
AutoProcessor/AutoNER/: SentenceAutoNER.h  TurkishSentenceAutoNER.cpp
AutoProcessor/AutoPredicate/: SentenceAutoFramePredicate.cpp  SentenceAutoFramePredicate.h  SentenceAutoPredicate.cpp  SentenceAutoPredicate.h  TurkishSentenceAutoFramePredicate.cpp  TurkishSentenceAutoFramePredicate.h  TurkishSentenceAutoPredicate.cpp  TurkishSentenceAutoPredicate.h
AutoProcessor/AutoSemantic/: SentenceAutoSemantic.cpp  SentenceAutoSemantic.h  TurkishSentenceAutoSemantic.cpp  TurkishSentenceAutoSemantic.h
Test/: AnnotatedSentenceTest.cpp
include/: UniversalDependencyRelation.h
src/: AnnotatedCorpus.cpp  AnnotatedCorpus.h  AnnotatedPhrase.cpp  AnnotatedPhrase.h  AnnotatedSentence.cpp  AnnotatedSentence.h  AnnotatedWord.cpp  AnnotatedWord.h  CMakeLists.txt
